--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,21 @@ author = "ESukmean"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "rt"] }
 bytes = "*"
 avl = "*"
+
+# atomic
+arc-swap = "*"
 
 # interface related
 tunio = "0.3"
 netconfig = "0.4"
 
+# dependencies of crates
+advmac = "*"
+
 # other utils
 toml = "0.8"
 serde = "1"
+enum-map = "2"
